-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-pool, 17-pool, 18
-
Component/s: hotspot
-
b19
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275363 | 17.0.2 | Zhengyu Gu | P4 | Resolved | Fixed | b03 |
| JDK-8275637 | 11.0.14 | Zhengyu Gu | P4 | Resolved | Fixed | b01 |
To ensure read side sees latest requested gc cause, when gc request flag is set.
- backported by
-
JDK-8275363 Shenandoah: Correct ordering of requested gc cause and gc request flag
-
- Resolved
-
-
JDK-8275637 Shenandoah: Correct ordering of requested gc cause and gc request flag
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/1297c26c
-
Commit
openjdk/jdk17u/01f4883c
-
Commit
openjdk/jdk/1ab64143
-
Review
openjdk/jdk11u-dev/533
-
Review
openjdk/jdk17u/198
-
Review
openjdk/jdk/5898
(3 links to)