8275051: Shenandoah: Correct ordering of requested gc cause and gc request flag

Reviewed-by: phh
Backport-of: 1ab64143c06e33e23172dd77c39e434443347364